# prax

./: .env  Cargo.toml  README.md  init.lua  prax.lua  sample.hurl  tarballin-ignore
.github/workflows/: rust.yml
cucumber/: requests.rs  responses.rs
cucumber/requests/: header.feature  method.feature  path.feature  query.feature  requests.feature  subst.feature
cucumber/responses/: header.feature
docs/: index.norg
docs/concepts/: store.norg
src/: io.rs  lib.rs  listen.rs  main.rs
src/bind/: filter.rs  mod.rs  report.rs  scribe.rs
src/cli/: mod.rs
src/comm/: bindings.rs  comms.rs  handler.rs  mod.rs  windower.rs
src/comm/comms/: intercept.rs  lines.rs
src/config/: err.rs  filter.rs  globals.rs  interp.rs  load.rs  mod.rs  rule.rs  target_ref.rs
src/hist/: body.rs  conv.rs  deser.rs  encoding.rs  mod.rs  store.rs  test.rs
src/lines/: imprint.rs  mod.rs  test.rs  to_lines.rs
src/listen/: srv.rs
src/notify/: linux.rs
src/nvim/: filter.rs  handler.rs  intercept.rs  io.rs  lines.rs  mod.rs  view.rs  windower.rs
src/nvim/tasks/: history_report.rs  mod.rs  runloop.rs  ui_binding.rs
src/proxy/: attr.rs  filter.rs  globals.rs  interp.rs  load.rs  mod.rs  query.rs  service.rs  sub.rs
src/proxy/test/: cucumber.rs  filter_check.rs  headers.lua  id.lua  intercept.lua  mod.rs  query.lua  trace.rs
src/proxy/test/headers/: config.lua  missing.in.req  missing.in.res  missing.out.req  missing.out.res  override.in.req  override.in.res  override.out.req
src/proxy/test/subst_func/: config.lua  transform.in.req  transform.out.req
src/srv/: err.rs  listen.rs  mod.rs  null.rs  service.rs  srv.rs
src/srv/tls/: mod.rs
src/store/: mod.rs
tests/features/: requests.feature
