[package]
name = "prax"
version = "0.1.0"
edition = "2021"

description = "a web penetration proxy hosted in neovim"
license = "MIT"
repository = "https://github.com/eulegang/prax"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
eyre = "0.6.12"
http = "1.0.0"
http-body = "1.0.0"
http-body-util = "0.1.0"
hyper = { version = "1.1.0", features = ["server", "client", "http1" ] }
hyper-util = { version = "0.1.3", features = [ "tokio" ] }
log = "0.4.20"
mlua = { version = "0.9.5", features = ["vendored", "macros", "async", "lua54" ] }
once_cell = "1.19.0"
pretty_env_logger = "0.5.0"
rmp = "0.8.12"
rmp-serde = "1.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36.0", features = ["full"] }

async-trait = "0.1"
futures = "0.3"
nvim-rs = { version = "0.7.0", features = [ "use_tokio" ] }
pin-project-lite = "0.2.13"
parity-tokio-ipc = "0.9.0"
tokio-util = "0.7.10"
lazy_static = "1.4.0"
simplelog = "0.12.1"
thiserror = "1.0.52"

rustls = "0.22.2"
tokio-rustls = "0.25.0"
webpki-roots = "0.26"
rustls-pemfile = "2.0.0"
flate2 = "1.0.28"
tokinotify = "0.1.0"
